[package]
name = "utils-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6"
reqwest = "0.11"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
